--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,16 @@
 [tox]
-envlist = py27, py350, pep8, pyflakes
+envlist = py27, py350, pycodestyle, pyflakes
 
 [testenv]
 commands = {envpython} -m unittest discover -s tests -p "*test*"
 deps = requests
 usedevelop = true
 
-[testenv:pep8]
+[testenv:pycodestyle]
 deps =
-    pep8
+    pycodestyle
 commands =
-    {envpython} -m pep8 src
+    {envpython} -m pycodestyle src
 
 [testenv:pyflakes]
 deps =
