--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,11 +10,11 @@ jobs:
       - run:
           command: |
             sudo python -m pip install --upgrade pip setuptools wheel
-            sudo python -m pip install --upgrade pep8 pyflakes coverage tox
+            sudo python -m pip install --upgrade pycodestyle pyflakes coverage tox
             sudo python -m pip install --upgrade virtualenv==12.0.2
       - run:
           command: |
-            tox -e py27,py350,pep8,pyflakes,coverage
+            tox -e py27,py350,pycodestyle,pyflakes,coverage
             sudo python setup.py develop
       - deploy:
           name: Push coverage
